...
            <point key="canvasLocation" x="1756" y="171"/>
        </scene>
        <!--All news-->
        <scene sceneID="vNq-P0-hxp">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="7KB-8Y-Ztd" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="All news" id="Ayy-po-yLj">
                        <imageReference key="image" image="globe" catalog="system" symbolScale="large"/>
                        <color key="badgeColor" red="0.55106025510000001" green="0.87736803760000004" blue="0.66088691040000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </tabBarItem>
                    <toolbarItems/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="AMh-2s-K3K">
...
            <point key="canvasLocation" x="-490" y="-612"/>
        </scene>
        <!--Favorite Channels-->
        <scene sceneID="WEn-cZ-zlE">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JUX-zZ-7zi" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Favorite Channels" image="heart" catalog="system" id="p4Q-NE-1aV"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iQg-Zy-9AE">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
            <point key="canvasLocation" x="708" y="-612"/>
        </scene>
        <!--Search-->
        <scene sceneID="ezu-Jp-fkX">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="arN-Br-7KF" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" id="7u4-cY-xSm"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hIZ-6d-a4J">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
